<resources>
    <string name="app_name">Game 15</string>

    <string name="n1" translatable="false">1</string>
    <string name="n2" translatable="false">2</string>
    <string name="n3" translatable="false">3</string>
    <string name="n4" translatable="false">4</string>
    <string name="n5" translatable="false">5</string>
    <string name="n6" translatable="false">6</string>
    <string name="n7" translatable="false">7</string>
    <string name="n8" translatable="false">8</string>
    <string name="n9" translatable="false">9</string>
    <string name="n10" translatable="false">10</string>
    <string name="n11" translatable="false">11</string>
    <string name="n12" translatable="false">12</string>
    <string name="n13" translatable="false">13</string>
    <string name="n14" translatable="false">14</string>
    <string name="n15" translatable="false">15</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="shuffle">Shuffle</string>
    <string name="about">Info</string>

    <string name="you_win">You win!</string>

    <string name="title_activity_fullscreenf">FullscreenfActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
