<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="indie.mefistofel.game15.MainActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/game_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <Button android:text="@string/n1" android:id="@+id/button1" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n2" android:id="@+id/button2" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n3" android:id="@+id/button3" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n4" android:id="@+id/button4" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n5" android:id="@+id/button5" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n6" android:id="@+id/button6" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n7" android:id="@+id/button7" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n8" android:id="@+id/button8" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n9" android:id="@+id/button9" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n10" android:id="@+id/button10" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n11" android:id="@+id/button11" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n12" android:id="@+id/button12" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n13" android:id="@+id/button13" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n14" android:id="@+id/button14" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
            <Button android:text="@string/n15" android:id="@+id/button15" android:layout_width="100dp" android:layout_height="100dp" android:textSize="32sp" android:textStyle="bold"/>
    </FrameLayout>

</FrameLayout>
